--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
@@ -25,7 +25,7 @@
 
             <ul class="nav nav-pills navbar-right">
                 <li role="presentation" class="nav-item dropdown">
-                    <a href="javascript:;" class="nav-link user-profile dropdown-toggle user-panel" data-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link user-profile dropdown-toggle user-panel pb-sm-3" data-toggle="dropdown" aria-expanded="false">
                         <img src="/img/user.jpg" class="img-circle elevation-2" alt="...">
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
