--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Usuario/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Usuario/Edit.cshtml
@@ -20,6 +20,7 @@
                                 <label asp-for="UsuarioModel.Nome" class="control-label"></label>
                                 <input asp-for="UsuarioModel.Nome" class="form-control" />
                                 <span asp-validation-for="UsuarioModel.Nome" class="text-danger"></span>
+                                <input type="hidden" asp-for="UsuarioModel.Senha" />
                             </div>
 
                             <input hidden asp-for="UsuarioModel.Cpf" class="form-control" />
@@ -30,20 +31,26 @@
                             </div>
 
                             <div class="form-group col-md-4">
+                                <label asp-for="OrganizacaoModel" class="control-label"></label>
+                                @Html.DropDownListFor(model => model.OrganizacaoModel.Id, ViewBag.Organizacoes as SelectList, new
+                                { @class = "form-control", @id = "select-organizacao" })
+                                <span asp-validation-for="OrganizacaoModel.Id" class="text-danger"></span>
+                                <input type="hidden" asp-for="@Model.OrganizacaoModel.Cnpj" />
+                                <input type="hidden" asp-for="@Model.OrganizacaoModel.RazaoSocial" />
+                            </div>
+
+                            <div class="form-group col-md-4">
                                 <label asp-for="TipoUsuarioModel.Id" class="control-label"></label>
                                 @Html.DropDownListFor(model => model.TipoUsuarioModel.Id, ViewBag.TiposUsuario as SelectList, new
-             { @class = "form-control", @id = "select-tipoUsuario" })
+                                { @class = "form-control", @id = "select-tipoUsuario" })
                                 <span asp-validation-for="TipoUsuarioModel.Id" class="text-danger"></span>
                             </div>
+
                             <div class="form-group col-md-4">
                                 <label asp-for="UsuarioModel.DataNascimento" class="control-label"></label>
                                 <input type="date" asp-for="UsuarioModel.DataNascimento" class="form-control" value="@if(@Model.UsuarioModel.DataNascimento != null){@Model.UsuarioModel.DataNascimento.ToString("yyyy-MM-dd")}else{@Model.UsuarioModel.DataNascimento}"/>
                                 <span asp-validation-for="UsuarioModel.DataNascimento" class="text-danger"></span>
                             </div>
-                            <input type="hidden" asp-for="UsuarioModel.Senha" />
-                            <input type="hidden" asp-for="@Model.OrganizacaoModel.Id" />
-                            <input type="hidden" asp-for="@Model.OrganizacaoModel.Cnpj" />
-                            <input type="hidden" asp-for="@Model.OrganizacaoModel.RazaoSocial" />
                         </div>
                         <div class="card-footer">
                             <div class=" col-md-4">
