feat: Ajusta icone

--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Usuario/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Usuario/Create.cshtml
@@ -87,7 +87,7 @@
                                     <input id="senha_auth" asp-for="UsuarioModel.Senha" class="form-control" placeholder="Senha" minlength="8" maxlength="16" />
                                     <div class="input-group-append">
                                         <div class="input-group-text">
-                                            <span class="fas fa-lock"></span>
+                                            <span class="fa fa-users"></span>
                                         </div>
                                     </div>
                                 </div>
