--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Organizacao/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Organizacao/Create.cshtml
@@ -24,7 +24,7 @@
                             </div>
                             <div class="form-group col-md-4">
                                 <label asp-for="Cnpj" class="control-label"></label>
-                                <input asp-for="Cnpj" class="form-control" />
+                                <input asp-for="Cnpj" class="form-control" placeholder="Apenas os Digitos"/>
                                 <span asp-validation-for="Cnpj" class="text-danger"></span>
                             </div>
 
