--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Details.cshtml
@@ -43,7 +43,7 @@
                                     @Html.DisplayNameFor(model => model.Objetivo)
                                 </dt>
                                 <dd>
-                                    <p class="form-control"> @Html.DisplayFor(model => model.Objetivo)</p>
+                                    <textarea class="form-control bg-white" readonly rows="4"> @Html.DisplayFor(model => model.Objetivo)</textarea>
                                 </dd>
                             </dl>
                         </div>
