--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Edit.cshtml
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Planejamento.Objetivo" class="control-label"></label>
-                                    <input asp-for="Planejamento.Objetivo" id="objetivo" class="form-control" />
+                                    <textarea asp-for="Planejamento.Objetivo" id="objetivo" class="form-control" maxlength="500" rows="4"></textarea>
                                     <span asp-validation-for="Planejamento.Objetivo" class="text-danger"></span>
                                 </div>
                             </div>
