correção para que os formulários fiquem fixo.

--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/wwwroot/css/dashboard.css
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/wwwroot/css/dashboard.css
@@ -57,3 +57,7 @@ input:checked + .slider:before {
     .slider.round:before {
         border-radius: 50%;
     }
+
+#objetivo,#horarioObjetivo,.form-control.bg-white[readonly] {
+    resize: none;
+}
