--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Edit.cshtml
@@ -12,7 +12,7 @@
                     <div class="card-header">
                         <h2 class="card-title">Editar Usuário</h2>
                     </div>
-                    <form asp-action="Edit">
+                    <form asp-action="Edit" onsubmit="return validarDataNascimento()">
                         <div class="card-body">
                             <input type="hidden" asp-for="UsuarioModel.Id" />
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -33,7 +33,7 @@
                             <div class="form-group col-md-4">
                                 <label asp-for="OrganizacaoModel" class="control-label"></label>
                                 @Html.DropDownListFor(model => model.OrganizacaoModel.Id, ViewBag.Organizacoes as SelectList, new
-                                { @class = "form-control", @id = "select-organizacao" })
+                                    { @class = "form-control", @id = "select-organizacao" })
                                 <span asp-validation-for="OrganizacaoModel.Id" class="text-danger"></span>
                                 <input type="hidden" asp-for="@Model.OrganizacaoModel.Cnpj" />
                                 <input type="hidden" asp-for="@Model.OrganizacaoModel.RazaoSocial" />
@@ -42,13 +42,14 @@
                             <div class="form-group col-md-4">
                                 <label asp-for="TipoUsuarioModel.Id" class="control-label"></label>
                                 @Html.DropDownListFor(model => model.TipoUsuarioModel.Id, ViewBag.TiposUsuario as SelectList, new
-                                { @class = "form-control", @id = "select-tipoUsuario" })
+                                    { @class = "form-control", @id = "select-tipoUsuario" })
                                 <span asp-validation-for="TipoUsuarioModel.Id" class="text-danger"></span>
                             </div>
 
                             <div class="form-group col-md-4">
                                 <label asp-for="UsuarioModel.DataNascimento" class="control-label"></label>
-                                <input type="date" asp-for="UsuarioModel.DataNascimento" class="form-control" value="@if(@Model.UsuarioModel.DataNascimento != null){@Model.UsuarioModel.DataNascimento.ToString("yyyy-MM-dd")}else{@Model.UsuarioModel.DataNascimento}"/>
+                                <input type="date" asp-for="UsuarioModel.DataNascimento" class="form-control"
+                                       value="@Model.UsuarioModel.DataNascimento.ToString("yyyy-MM-dd")" />
                                 <span asp-validation-for="UsuarioModel.DataNascimento" class="text-danger"></span>
                             </div>
                         </div>
@@ -75,14 +76,32 @@ else if (TempData["mensagemErro"] != null)
 }
 
 @section Scripts {
+    <script type="text/javascript">
+        function validarDataNascimento() {
+            var dataNascimento = document.getElementById("UsuarioModel_DataNascimento").value;
 
-    <script>
-        $(document).ready(function () {
-            if (document.querySelector('#mensagem-retorno'))
-                document.getElementById("mensagem-retorno").click();
-        });
+            if (dataNascimento) {
+                var data = new Date(dataNascimento);
+                var hoje = new Date();
+                var idade = hoje.getFullYear() - data.getFullYear();
+                var mes = hoje.getMonth() - data.getMonth();
+
+                if (mes < 0 || (mes === 0 && hoje.getDate() < data.getDate())) {
+                    idade--;
+                }
+
+                if (idade < 5 || idade > 100) {
+                    alert("A data de nascimento deve resultar em uma idade entre 5 e 100 anos.");
+                    return false; // Impede o envio do formulário
+                }
+            }
+
+            return true; // Permite o envio do formulário
+        }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
