Problemas relacionados a Bloco Resolvidos!

--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Bloco/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Bloco/Details.cshtml
@@ -18,17 +18,11 @@
                         <div class="col-md-10">
                             <dl class="dl-horizontal">
                                 <dt>
-                                    @Html.DisplayNameFor(model => model.Id)
+                                    @Html.DisplayNameFor(model => model.NomeOrganizacao)
                                 </dt>
                                 <dd>
-                                    <p class="form-control"> @Html.DisplayFor(model => model.Id)</p>
-                                </dd>
-                                <dt>
-                                    @Html.DisplayNameFor(model => model.OrganizacaoId)
-                                </dt>
-                                <dd>
-                                    <p class="form-control"> @Html.DisplayFor(model => model.OrganizacaoId)</p>
-                                </dd>
+                                    <p class="form-control"> @Html.DisplayFor(model => model.NomeOrganizacao)</p>
+                                </dd>                                
                                 <dt>
                                     @Html.DisplayNameFor(model => model.Titulo)
                                 </dt>
